# arc-lang-public

./: pyproject.toml  v1.aux  v1.fdb_latexmk  v1.fls  v1.out
paper/: v1.tex
src/: main.py  run.py  utils.py
src/configs/: gemini3pro_configs.py  gpt52_configs.py
src/llms/: messages.py  models.py  openai_responses.py  structured.py
